<resources>
    <string name="app_name">EV2</string>
    }
    <string name="nombre">Nombre</string>
    <string name="pass">Contraseña</string>
    <string name="title_activity_barra_navegacion">BarraNavegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Datos INE</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Alta</string>
    <string name="menu_slideshow">Consulta</string>
    <string name="menu_tools">Modificar</string>
    <string name="menu_share">Eliminar</string>
    <string name="menu_send">Lista de Activos</string>
    <string name="menu_finados">Lista de Finados</string>
    <string name="menu_creditos">Creditos</string>
    <string name="menu_salir">Salir</string>
    <string name="s_crear">Crear</string>
    <string name="s_modificar">Modificar</string>
    <string name="todo">Foto</string>
    <string name="s_AP">Apellido Paterno</string>
    <string name="s_AM">Apellido Materno</string>
    <string name="s_Nombre">Nombre</string>
    <string name="s_dom">Domicilio</string>
    <string name="s_Calle">Calle</string>
    <string name="s_NumExt">Número Exterior</string>
    <string name="s_NumInt">Número Interior</string>
    <string name="s_Colonia">Colonia</string>
    <string name="s_CP">Código Postal</string>
    <string name="s_fechanacimiento">Fecha de Nacimiento</string>
    <string name="s_sex">Sexo</string>
    <string name="s_ClaveElectoral">Clave de elector</string>
    <string name="s_CURP">CURP</string>
    <string name="s_AnioReg">Año de registro</string>
    <string name="s_AnioEmision">Año de Emisión</string>
    <string name="s_Vigencia">Vigencia</string>
    <string name="textview">Datos IFE</string>
    <string name="s_limpiar">Limpiar</string>
    <string name="s_guardar">Guardar</string>
    <string name="s_consultar">Consulta</string>
    <string name="s_ConsulxCURP">Consulta por CURP</string>
    <string name="s_ConsulxNombre">Consulta por Nombre</string>
    <string name="Buscar" />
    <string name="s_Consulxmunicipio">Consulta por municipio</string>
    <string name="s_ClaveAdicionalCURP">Clave Adicional CURP</string>
    <string name="s_Mapa">Ver Mapa</string>
    <string name="s_Buscar">Buscar</string>

    <string name="Creditos">Creditos</string>
    <string name="Profesor">Profesor: </string>
    <string name="Rocio">M. en C. Rocio Elizabeth Pulido Alba </string>
    <string name="alumnos">Alumnos: </string>
    <string name="Marthirri">Alcántara Linares Martha Mitchell </string>
    <string name="kelly">Farias Gómez Kelly Jocelyn </string>
    <string name="yo">Zermeño Pichardo Laura </string>
    <string name="materia">Materia: </string>
    <string name="desarrollo">Desarrollo de Aplicaciones moviles </string>
    <string name="ings">Ingeniería en sistemas Computacionales</string>
    <string name="carrera">Carrera: </string>
    <string name="ciclo">Ciclo escolar 2020 </string>
    <string name="semestre">Semestre: Enero - Junio </string>
    <string name="Grupo">grupo: Sist-Tics </string>
    <string name="tecnm">Instituto Tecnológico de Toluca</string>
    <string name="title_activity_maps">Map</string>
</resources>
